# Humanitarian-Projects

./: pyproject.toml  test.py  test_script.py
project/: data_extraction.py  data_transformation.py  definitions.py
projects/: data_extraction.py  data_load.py  definitions.py  eda.py
raw_data/: Affected People: Refugees & Persons of Concern for State of Palestine.csv  Affected People: Returnees for State of Palestine.csv  Coordination & Context: Conflict Events for State of Palestine.csv  Coordination & Context: Funding for State of Palestine.csv  Coordination & Context: National Risk for State of Palestine.csv  Food Security, Nutrition & Poverty: Food Prices & Market Monitor for State of Palestine.csv  Food Security, Nutrition & Poverty: Food Security for State of Palestine.csv  Food Security, Nutrition & Poverty: Poverty Rate for State of Palestine.csv  Geography & Infrastructure: Baseline Population for State of Palestine.csv  Metadata: Data Availability for State of Palestine.csv
